--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -56,3 +56,10 @@ evabat:
   email: "evabat13@gmail.com"
   twitter: "@EvaBat"
 #
+dechrysou:
+  name: "Despina Eleana Chrysou"
+  bio: "student"
+  uri: "https://www.linkedin.com/in/despina-eleana-chrysou-72a0a047/"
+  email: "dechrysou@gmail.com"
+  twitter: "@eleana_gr"
+#
